[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/InputManager/Tools/BaseTool.gd" type="Script" id=1]
[ext_resource path="res://src/InputManager/Tools/SelectTool.gd" type="Script" id=2]
[ext_resource path="res://src/InputManager/InputManager.gd" type="Script" id=3]
[ext_resource path="res://src/InputManager/Tools/MoveTool.gd" type="Script" id=4]
[ext_resource path="res://scenes/GraphManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/UIManager.tscn" type="PackedScene" id=6]

[node name="InputManager" type="Control"]
script = ExtResource( 3 )

[node name="Tools" type="Node2D" parent="."]

[node name="BaseTool" type="Node2D" parent="Tools"]
script = ExtResource( 1 )

[node name="SelectTool" type="Node2D" parent="Tools"]
script = ExtResource( 2 )

[node name="MoveTool" type="Node2D" parent="Tools"]
script = ExtResource( 4 )

[node name="UIManager" parent="." instance=ExtResource( 6 )]

[node name="GraphManager" parent="." instance=ExtResource( 5 )]
